[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bamrefine"
version = "0.1.0"
authors = [
	{name="Etka Yapar", email="etka.yapar@gmail.com"},
]
description = "A small program to mask positions that could result in a PMD artifact from a BAM file using a predefined SNP catalog"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
	"pysam ~= 0.20.0",
]
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: BSD License",
]

[project.urls]
"Homepage" = "https://github.com/etkayapar/bamRefine"
"Bug Tracker" = "https://github.com/etkayapar/bamRefine/issues"

[project.scripts]
bamrefine = "bamRefine.__main__:main"
bamrefine_proc = "bamRefine.functions:main"
bamrefine_man = "bamRefine.__main__:man"

[tool.setuptools.package-data]
"bamRefine.man.man1" = ["*.1"]
"bamRefine.sample_data" = ["*.snp", "*.bed"]